<resources>
    <string name="app_name">彩票</string>
    <string name="app_name1">彩票1</string>
    <string name="c083">c083</string>
    <string name="C022">C022</string>
    <string name="c120">新葡京彩票</string>
    <string name="c054">香港国际</string>
    <string name="c084">新2彩票</string>
    <string name="c001">彩47彩票集团</string>
    <string name="c194">好彩国际</string>
    <string name="c005">乐盈彩票</string>
    <string name="c173">东方集团</string>
    <string name="c018">2044彩票</string>
    <string name="c151">澳门新葡京</string>
    <string name="c150">0187彩票</string>
    <string name="ug">UG</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">欢迎您</string>
    <string name="top_up">充值</string>
    <string name="deposit">提现</string>
    <string name="transform">额度转换</string>
    <string name="transform_record">转换记录</string>
    <string name="transform_record1">额度转换记录</string>
    <string name="mustputpsw">必须填写密码</string>
    <string name="mustputuser">必须填写用户名</string>
    <string name="mind_psw">记住密码</string>
    <string name="login">登录</string>
    <string name="regedit">马上注册</string>
    <string name="playgame">免费试玩</string>
    <string name="gotohome">回到首页</string>
    <string name="inputuser">请输入用户名</string>
    <string name="inputpwd">请输入密码</string>
    <string name="verify_err">请滑动验证</string>
    <string name="google_code">请输入谷歌验证码</string>
    <string name="agent_id">请输入 6-15 位字母与数字组成推荐人ID</string>
    <string name="agent_id3">请填写推荐人ID</string>
    <string name="agent_id2">推荐人ID: 为 6-15 位字母与数字组成</string>
    <string name="agent_id4">推荐人ID: 为(1-10 位)</string>
    <string name="inputuser11">请填写用户名(至少6位)</string>
    <string name="inputuser1">请填写用户名(至少6位数字加字母组合)</string>
    <string name="inputuser2">用户名至少6位数字加字母组合</string>
    <string name="inputuser3">用户名必须是包含数字和字母的6-15位</string>
    <string name="inputuser9">用户名必须是4-15位</string>
    <string name="inputpwd1">请填写密码(至少6位数字加字母组合)</string>
    <string name="inputpwd2">密码至少6位数字加字母组合</string>
    <string name="inputpwdlength">密码至少</string>
    <string name="inputpwdlength1">位字母加数字组合</string>
    <string name="inputpwdlength4">位字母、数字、符号组合</string>
    <string name="inputpwdlength2">包含字符</string>
    <string name="inputpwdlength3">请再次填写</string>
    <string name="inputpwd3">密码至少6到16位字母加数字组合</string>
    <string name="inputpwd7">再次输入密码至少6到16位字母加数字组合不能包含字符</string>
    <string name="inputpwd8">密码至少6位</string>
    <string name="inputpwd4">请确认密码</string>
    <string name="inputpwd5">请再次输入您的密码</string>
    <string name="inputpwd6">两次输入密码不一致！</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="input_name_lenght">真实姓名至少2-10位</string>
    <string name="input_pay_pwd">请输入四位数字的取款密码</string>
    <string name="input_QQ">请输入QQ</string>
    <string name="input_wx">请输入微信号</string>
    <string name="input_phone">请输入11位手机号码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_phone_code">请输入手机短信验证码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="security_emailerr">Email不符合规则</string>
    <string name="errorphone">手机号码格式不正确，请输入正确的手机</string>
    <string name="input_phone_code_lenght">手机短信验证码为6位</string>
    <string name="regedit1">注册</string>
    <string name="back_login">返回登录</string>
    <string name="back_close">封盘中    </string>
    <string name="input_money">请输入要转入的金额</string>
    <string name="bank_manage">请补充您的银行卡信息</string>
    <string name="bank">银行卡管理</string>
    <string name="open_bank">开户银行</string>
    <string name="open_bank_address">开户行地址</string>
    <string name="bank_card">银行卡号</string>
    <string name="bank_name">持卡人姓名</string>
    <string name="sub">提交</string>
    <string name="bank_select">请选择您的银行卡所属银行</string>
    <string name="bank_input_address">请输入您的银行卡开户行地址</string>
    <string name="bank_address">开户行地址: 长度必须在 5位 - 50 位数之间！</string>
    <string name="bank_input_card">请输入您的银行卡卡号</string>
    <string name="bank_card_length">银行卡号: 长度必须在 16位 - 19 位数之间！</string>
    <string name="bank_input_name">请输入持卡人姓名</string>
    <string name="bank_name_length">持卡人姓名: 为2到10位中文 组成！</string>
    <string name="server_info">为了您的资金安全，银行卡信息一经确定，无法随意修改。请联系客服修改您的银行卡相关信息</string>
    <string name="server">是否联系客服</string>
    <string name="setpaypw">请先设置您的取款密码</string>
    <string name="loginpw">登录密码</string>
    <string name="inputloginpw">请输入您的登录密码</string>
    <string name="paypw">提款密码</string>
    <string name="inputpaypw">请输入您的4位数字提款密码</string>
    <string name="paypw1">确认密码</string>
    <string name="paypwqr">请确认您的提款密码</string>
    <string name="inputpaypw2">请输入您的4位数字确认密码</string>
    <string name="money_integer">金额不能为空且金额必须是整数</string>
    <string name="pwd_null">密码不能为空</string>
    <string name="confirm_sub">确认提交</string>
    <string name="extract_money">请输入提现金额</string>
    <string name="noData">暂无数据</string>
    <string name="view_details">查看详情</string>
    <string name="pay_deposit">存款</string>
    <string name="pay_withdrawals">取款</string>
    <string name="pay_deposit_record">存款记录</string>
    <string name="pay_withdrawals_record">取款记录</string>
    <string name="pay_account">资金明细</string>
    <string name="pay_data">日期</string>
    <string name="pay_money">金额</string>
    <string name="pay_status">状态</string>
    <string name="pay_type">类型</string>
    <string name="pay_balance">余额</string>
    <string name="no_bank_card">您还没绑定银行卡</string>
    <string name="band_bank_card">绑定银行卡</string>
    <string name="input_pay_balance">请输入存款金额</string>
    <string name="start_topup">开始充值</string>
    <string name="select_bank">请选择银行</string>
    <string name="select_user">请选择一个任意转入账号</string>
    <string name="bank_user">银行名称：</string>
    <string name="payee">收款姓名：</string>
    <string name="bank_account">银行账号：</string>
    <string name="bank_site">开户地址：</string>
    <string name="copy">复制</string>
    <string name="deposit_money">请填写存款金额</string>
    <string name="remark">备注信息(非必填)</string>
    <string name="Transfer_name">请填写实际转账人姓名</string>
    <string name="payuser">收款账号：</string>
    <string name="bankname">支行名称：</string>
    <string name="qr_code">二维码：</string>
    <string name="qr_album">截屏相册扫码</string>
    <string name="pay_ysf">请填写付款的云闪付用户昵称</string>
    <string name="pay_alipay">请填写付款的支付宝真实姓名</string>
    <string name="pay_cft">请填写付款的财付通用户昵称</string>
    <string name="pay_wx">请填写付款订单号后六位或微信用户昵称</string>
    <string name="pay_wx_alipay">请填写付款的微信支付宝用户昵称</string>
    <string name="pay_alipay_hb">请填写付款的支付宝真实姓名</string>
    <string name="pay_jd">请填写付款的京东钱包真实姓名</string>
    <string name="pay_dd">请填写付款的钉钉真实姓名</string>
    <string name="pay_wxsh">请填写微信昵称或商户单号后六位</string>
    <string name="pay_ds">请填写付款的多闪账号</string>
    <string name="pay_alipay_nc">请填写付款的支付宝昵称</string>
    <string name="name">姓名：</string>
    <string name="transfer_recor">转换记录</string>
    <string name="transfer_out">转出钱包</string>
    <string name="transfer_in">转入钱包</string>
    <string name="transfer_money">转换金额</string>
    <string name="start_transfer">开始转换</string>
    <string name="user_balance">账户余额</string>
    <string name="user_balance1">账户余额: ¥ </string>
    <string name="select_out">请选择转出的游戏</string>
    <string name="select_in">请选择转入的游戏</string>
    <string name="out_in">转出钱包合转入钱包不能同一个类型</string>
    <string name="game_name1">游戏</string>
    <string name="transfer_user">仅正式会员可以进行额度转换</string>
    <string name="pattern">模式</string>
    <string name="my_information">我的资料</string>
    <string name="account_number">账号:</string>
    <string name="real_name">真实姓名:</string>
    <string name="qq">QQ:</string>
    <string name="mobile_phone">手机:</string>
    <string name="mailbox">邮箱:</string>
    <string name="currency">币别:</string>
    <string name="happy_exchange">开心乐兑换</string>
    <string name="mission_hall">任务大厅</string>
    <string name="accounting_change">开心乐账变</string>
    <string name="vip_level">VIP等级</string>
    <string name="accounting_variance_type">账变类型</string>
    <string name="happiness">开心乐</string>
    <string name="happy_balance">开心乐余额</string>
    <string name="full_date">全部日期</string>
    <string name="level">等级</string>
    <string name="happy_joy">开心乐头</string>
    <string name="happy_growth">成长开心乐</string>
    <string name="recommendation_feedback_context1">游戏过程中遇到的问题（如充值提款等），请联系在线客服以便我们为您及时处理。</string>
    <string name="recommendation_feedback_context2">如果您对游戏或者平台有好的建议可以进行提交，官方客服会在48小时内进行回复。我们会参考您的反馈不断优化我们的产品和服务。</string>
    <string name="recommendation_feedback_context3">为了让平台所有会员获得最好的服务，维护会员权益，我们为会员提供出款监督服务，如出款遇到恶意拖延、不出款等问题可以提出投诉！我们会尽快为您解决。</string>
    <string name="recommendation_feedback_context4">为了让平台所有会员获得最好的服务，维护会员权益，我们为会员提供出款监督服务，如出款遇到恶意拖延、不出款等问题可以提出投诉！我们会尽快为您解决。</string>
    <string name="recommendation_feedback">建议反馈</string>
    <string name="submitting_recommendations">反馈类型:提交建议</string>
    <string name="please_enter_feedback">请输入反馈内容</string>
    <string name="must_fill_in_the_contents">必须填写内容</string>
    <string name="i_want_to_complain">反馈类型:我要投诉</string>
    <string name="content_description">内容描述</string>
    <string name="whole">全部</string>
    <string name="to_be_answered">待回复</string>
    <string name="replied">已回复</string>
    <string name="online_service">在线客服</string>
    <string name="complaint_suggestions">投诉建议</string>
    <string name="feedback_record">反馈记录</string>
    <string name="submitted_10_words">提交内容字数必须大于10字</string>
    <string name="red_envelopes">红包记录</string>
    <string name="red_mine_envelopes">扫雷记录</string>
    <string name="mail">站内信</string>
    <string name="message_content">消息内容</string>
    <string name="safety_center">安全中心</string>
    <string name="original_password">填写原密码</string>
    <string name="please_original_password">请填写原密码</string>
    <string name="enter_original_password">请输入6到16位密码</string>
    <string name="fill_in_the_new_password">填写新密码</string>
    <string name="please_fill_in_the_new_password">请填写新密码</string>
    <string name="confirm_the_new_password">确认新密码</string>
    <string name="please_confirm_the_new_password">请确认新密码</string>
    <string name="fill_old_withdrawal_password">填写旧取款密码</string>
    <string name="please_fill_old_withdrawal_password">请填写旧取款密码</string>
    <string name="select_common_login_location">请选择常用登录地点</string>
    <string name="add">添加</string>
    <string name="login_password">登录密码</string>
    <string name="withdrawal_password">取款密码</string>
    <string name="common_login_location">常用登录地</string>
    <string name="secondary_validation">二次验证</string>
    <string name="china">中国</string>
    <string name="foreign_country">国外</string>
    <string name="complete_information_submit">请完善信息后提交!</string>
    <string name="duplicate_login_locations">重复的常用登录地点</string>
    <string name="added">已添加：</string>
    <string name="confirm_new_password">请确认新密码密码</string>
    <string name="affirm">确认</string>
    <string name="info">提示信息</string>
    <string name="notice">公告</string>
    <string name="openhappy">特码已开出，请刮开特码体验开奖新乐趣。</string>
    <string name="opening">开奖准备中</string>
    <string name="coupons">优惠活动</string>
    <string name="more">查看更多>></string>
    <string name="computer">电脑版</string>
    <string name="redbagbalance">红包余额:</string>
    <string name="rob_redbag">可抢红包:</string>
    <string name="activ">活动介绍</string>
    <string name="once_rob">立即开抢</string>
    <string name="getsuccess">领取成功</string>
    <string name="loginaddactivt">请先登录后再参与活动</string>
    <string name="select_play">请选择玩法</string>
    <string name="select_money">请选择或输入投注金额</string>
    <string name="issue">期</string>
    <string name="has_won__prize">已中奖</string>
    <string name="not_won__prize">未中奖</string>
    <string name="waiting_won__prize">等待开奖</string>
    <string name="withdrawal">已撤单</string>
    <string name="no_more_records">没有更多记录</string>
    <string name="down_amount">下注总金额：</string>
    <string name="win_lose_amount">输赢金额：</string>
    <string name="not_amount">0.00元</string>
    <string name="game">游戏</string>
</resources>