<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/red_pack_big" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_info"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/account_number"
                android:textColor="@color/fount1"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_27"
                android:text="@string/redbagbalance"
                android:textColor="@color/fount1"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_27"
                android:text="@string/rob_redbag"
                android:textColor="@color/fount1"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:text="@string/game"
                android:textColor="@color/black"
                android:id="@+id/tv_user"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_27"
                android:text="@string/game"
                android:textColor="@color/black"
                android:id="@+id/tv_redbag_balance"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_27"
                android:text="@string/game"
                android:textColor="@color/black"
                android:id="@+id/tv_redbag_count"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_30"
        android:id="@+id/tv_once_rob"
        android:layout_below="@+id/ll_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/redbag_bg"
        android:gravity="center"
        android:text="@string/once_rob"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_once_rob"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_6"
        android:text="@string/activ"
        android:id="@+id/tv_activ"
        android:textColor="@color/message_text_color" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_activ"

        android:textColor="@color/white"
        android:gravity="left"
        android:textSize="@dimen/sp_12"
        android:text="11111111"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_6"
        android:id="@+id/tv_content"
        />
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_45"
        android:src="@drawable/dialog_close" />

</RelativeLayout>