<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        >

        <TextView
            android:id="@+id/type_name_tex"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            style="@style/pub_tex1"
            android:text="@string/submitting_recommendations"
            android:layout_gravity="left"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:orientation="vertical"
            android:background="@drawable/shape_ticket_name_grayt"
            >

            <EditText
                android:id="@+id/context_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="@dimen/dp_5"
                android:padding="@dimen/dp_8"
                android:background="@null"
                android:hint="@string/please_enter_feedback"
                android:textColorHint="@color/color_white"
                android:gravity="top"
                android:textColor="@color/color_white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tis_tex"
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/pub_tex1"
                android:text="@string/must_fill_in_the_contents"
                android:textColor="@color/fount1"
                android:gravity="left"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/progress_tex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/pub_tex1"
                android:text="0/50"
                android:gravity="left"
                android:visibility="gone"
                />

        </LinearLayout>

        <Button
            android:id="@+id/commit_but"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:background="?attr/colorAccent"
            style="@style/pub_tex1"
            android:layout_marginTop="@dimen/dp_40"
            android:textColor="@color/color_white"
            android:text="@string/sub"
            android:textSize="@dimen/sp_18"
            />

</LinearLayout>
