<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_white"
    >

    <include layout="@layout/pub_telete_lay"/>

    <include layout="@layout/pubglidstye"
        />

    <include layout="@layout/line"
        android:id="@+id/line_view"
        />


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:id="@+id/note_record_refresh"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_record_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

            <TextView
                android:id="@+id/no_more_records_tex"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                style="@style/pub_tex"
                android:textSize="@dimen/sp_18"
                android:text="@string/no_more_records"
                />


        </LinearLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:background="?attr/colorAccent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/pub_tex"
            android:text="@string/down_amount"
            android:textColor="@color/color_white"
            />

        <TextView
            android:id="@+id/total_money_tex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/pub_tex"
            android:text="@string/not_amount"
            android:textColor="@color/color_ffbc2e"
            />

        <TextView
            android:layout_width="@dimen/dp_4"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <LinearLayout
            android:id="@+id/win_lose_lin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/pub_tex"
            android:text="@string/win_lose_amount"
            android:textColor="@color/color_white"
            />

        <TextView
            android:id="@+id/win_lose_tex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/pub_tex"
            android:text="@string/not_amount"
            android:textColor="@color/color_white"
            />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
